# RFIDIOt

./: .gitignore  AID-data.csv  AID-get-data.py  AID-lookup-demo.py  AID-rim-data.csv  AID_data.py  AID_lookup.py  PY3_NOTES.TXT  Run_Pylint.sh  Run_Test.py  mifarekeys.py  pyproject.toml  readtag.py  requirements.txt  rfidiot-cli.py  setup.py  sod.py
Test_data/: AID-data.csv  Mf1k_4b_test.nfc  Mf1k_7b_test.nfc  README.TXT  RID-data.csv
rfidiot/: RFIDIOt.py  __init__.py  rfidiotglobals.py
