

[project]
name = "rfidiot"  
requires-python = ">=3.8"



description = "rfidiot is a collection of tools and libraries for exploring RFID technology, written in python."


authors = [
    {name = "Adam Laurie", email = "adam@algroup.co.uk" }
]

maintainers = [
    {name = "Adam Laurie", email = "adam@algroup.co.uk" }
]


dependencies = [
    "pycryptodome>=3.20.0"
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pycodestyle",
    "black"
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "http://rfidiot.org/"
"Source" = "https://github.com/AdamLaurie/RFIDIOt"


lint = [
    "validate-pyproject[all]",
    "pylint",
    "pycodestyle,
]

[tool.pycodestyle]
max-line-length = 140
ignore = "E722,W391,E203"

[tool.pylint.format]
max-module-lines = 1200

[tool.pylint]
max-line-length = 140

tool.pylint.messages_control]
disable = 
    "invalid-name",
    "missing-docstring",
    "too-many-arguments",
    "too-many-locals",
    "line-too-long",
    "consider-using-f-string",
    "redefined-outer-name",
    "bare-except",
    "duplicate-code"
]



# [tool.setuptools]
# script-files = ["mifarekeys.py", "readtag.py"]

[tool.black]
line-length = 140
target-version = ["py38", "py39", "py310", "py311"]
skip-source-first-line = true
skip-string-normalization = true
